--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
     <img src="./assets/images/Movie.png" height="400" width="400" alt="Movie Ranking Project">
-    <br /><a href="./public/contact.html" >Contact me </a>
-   <br /> <a href="./public/about.html" >About me </a>
+    <a href="./public/contact.html" >Contact me </a><br />
+   <a href="./public/about.html" >About me </a> <br />
 </body>
 </html>
