--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
 
 
-    <img src="./assets/images/Movie.png" height="400" width="400" alt="Movie Ranking Project">
+    <img src="./assets/images/Movie.png" height="400" width="400" alt="Movie Ranking Project"><hr />
     <a href="./public/contact.html" >Contact me </a><br />
-   <a href="./public/about.html" >About me </a> 
+   <a href="./public/about.html" >About me </a> <br />
 </body>
 </html>
