--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 
     <img src="./assets/images/Movie.png" height="400" width="400" alt="Movie Ranking Project">
-    <hr />
-    <a href="./public/contact.html" >Contact me </a><br />
-   <a href="./public/about.html" >About me </a><br />
+    <hr>
+    <a href="./public/contact.html" >Contact me </a><br>
+   <a href="./public/about.html" >About me </a><br>
 </body>
 </html>
